kube/acceptbitcoincash-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: default
  labels:
    service: spec-consortium-cash
  name: spec-consortium-cash
spec:
  replicas: 2
  template:
    metadata:
      labels:
        service: spec-consortium-cash
    spec:
      containers:
      - image: bigearth/spec.consortium.cash
        name: spec-consortium-cash
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
      restartPolicy: Always
