kube/acceptbitcoincash-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: spec.consortium.cash
  namespace: default
spec:
  ports:
    - port: 90
      targetPort: 80
  selector:
    service: spec.consortium.cash
  type: NodePort
