kube/acceptbitcoincash-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spec-consortium-cash-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - spec.consortium.cash
    secretName: spec-consortium-cash-tls
  backend:
    serviceName: spec-consortium-cash
    servicePort: 90
  rules:
  - host: spec.consortium.cash
    http:
      paths:
      - path: /
        backend:
          serviceName: spec-consortium-cash
          servicePort: 90
